// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BOOLEAN.proto";
import "../ccsds_mal/TIME.proto";


package pusModelEditor.protobuf;

message CompareStructure {
extensions 4 to 104;

  optional ccsds_mal.protobuf.TIME firstDate = 1;
  optional ccsds_mal.protobuf.TIME secondDate = 2;
  optional ccsds_mal.protobuf.BOOLEAN startCompTool = 3;
}
