// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";
import "./Pus144OnboardFile.proto";


package pusModelEditor.protobuf;

message Pus144Model {
extensions 6 to 106;

  repeated pusModelEditor.protobuf.Pus144OnboardFile pus144OnboardFiles = 1;
  optional ccsds_mal.protobuf.UINTEGER status = 2;
  optional ccsds_mal.protobuf.ULONG uniqueId = 3;
  optional ccsds_mal.protobuf.UINTEGER serviceApid = 4;
  optional ccsds_mal.protobuf.STRING serviceApidName = 5;
}
