// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";
import "./Pus014ForwardedPacket.proto";


package pusModelEditorMessages.protobuf;

message Pus014Model {
extensions 6 to 106;

  repeated pusModelEditorMessages.protobuf.Pus014ForwardedPacket pus014TmPacket = 1;
  optional ccsds_mal.protobuf.UINTEGER serviceApid = 2;
  optional ccsds_mal.protobuf.UINTEGER status = 3;
  optional ccsds_mal.protobuf.STRING serviceApidName = 4;
  optional ccsds_mal.protobuf.ULONG uniqueId = 5;
}
