// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";
import "./Pus018Obcp.proto";


package pusModelEditorMessages.protobuf;

message Pus018Model {
extensions 9 to 109;

  optional ccsds_mal.protobuf.UINTEGER engineStatus = 1;
  repeated pusModelEditorMessages.protobuf.Pus018Obcp pus018Obcp = 2;
  optional ccsds_mal.protobuf.UINTEGER status = 3;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeEngineStatus = 4;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeEngineStatus = 5;
  optional ccsds_mal.protobuf.UINTEGER serviceApid = 6;
  optional ccsds_mal.protobuf.STRING serviceApidName = 7;
  optional ccsds_mal.protobuf.ULONG uniqueId = 8;
}
