// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";
import "./Pus140Parameter.proto";


package pusModelEditorMessages.protobuf;

message Pus140Model {
extensions 4 to 104;

  repeated pusModelEditorMessages.protobuf.Pus140Parameter pus140Parameter = 1;
  optional ccsds_mal.protobuf.UINTEGER status = 2;
  optional ccsds_mal.protobuf.ULONG uniqueId = 3;
}
