// Produced by Acceleo JavaScript Generator 1.1.2
/* eslint-disable max-len, "DV6 TBC_CNES generated code can't avoid too long lines" */
/* eslint-disable complexity, "DV6 TBC_CNES generated code can't avoid complexity" */
const Pus015Model = require('./pus015Model');
const Pus140Model = require('./pus140Model');
const Pus018Obcp = require('./pus018Obcp');
const Pus012Model = require('./pus012Model');
const Pus142Model = require('./pus142Model');
const PusMmeModel = require('./pusMmeModel');
const Pus018Model = require('./pus018Model');
const Pus144Model = require('./pus144Model');
const HeaderStructure = require('./headerStructure');
const Pus013Ldt = require('./pus013Ldt');
const Pus012MonitoringCheckProperties = require('./pus012MonitoringCheckProperties');
const PusElementList = require('./pusElementList');
const Pus019Model = require('./pus019Model');
const Pus013Model = require('./pus013Model');
const PusValue = require('./pusValue');
const PusMmePacket = require('./pusMmePacket');
const ResetStructure = require('./resetStructure');
const Pus011TimeShift = require('./pus011TimeShift');
const InitialiseStructure = require('./initialiseStructure');
const DataStructure = require('./dataStructure');
const Pus012ParameterMonitoringDefinition = require('./pus012ParameterMonitoringDefinition');
const PusServiceApid = require('./pusServiceApid');
const Pus005OnBoardEvent = require('./pus005OnBoardEvent');
const Pus015PacketStore = require('./pus015PacketStore');
const Pus011Command = require('./pus011Command');
const Pus014Model = require('./pus014Model');
const PusMmePacketStore = require('./pusMmePacketStore');
const Pus144OnboardFile = require('./pus144OnboardFile');
const Pus011Apid = require('./pus011Apid');
const Pus014ForwardedPacket = require('./pus014ForwardedPacket');
const Pus011CommandParameter = require('./pus011CommandParameter');
const Pus011Model = require('./pus011Model');
const Pus140Parameter = require('./pus140Parameter');
const Pus005Model = require('./pus005Model');
const Pus015Packet = require('./pus015Packet');
const Pus142FunctionalMonitoring = require('./pus142FunctionalMonitoring');
const Pus019EventAction = require('./pus019EventAction');
const Pus011SubSchedule = require('./pus011SubSchedule');
const PusParameter = require('./pusParameter');
const PusMmePacketParameter = require('./pusMmePacketParameter');
const Pus013LdtPart = require('./pus013LdtPart');
const Pus142ParameterMonitoringDefinition = require('./pus142ParameterMonitoringDefinition');
const CompareStructure = require('./compareStructure');

module.exports = {
  Pus015Model: { type: 'protobuf', adapter: Pus015Model },
  Pus140Model: { type: 'protobuf', adapter: Pus140Model },
  Pus018Obcp: { type: 'protobuf', adapter: Pus018Obcp },
  Pus012Model: { type: 'protobuf', adapter: Pus012Model },
  Pus142Model: { type: 'protobuf', adapter: Pus142Model },
  PusMmeModel: { type: 'protobuf', adapter: PusMmeModel },
  Pus018Model: { type: 'protobuf', adapter: Pus018Model },
  Pus144Model: { type: 'protobuf', adapter: Pus144Model },
  HeaderStructure: { type: 'protobuf', adapter: HeaderStructure },
  Pus013Ldt: { type: 'protobuf', adapter: Pus013Ldt },
  Pus012MonitoringCheckProperties: { type: 'protobuf', adapter: Pus012MonitoringCheckProperties },
  PusElementList: { type: 'protobuf', adapter: PusElementList },
  Pus019Model: { type: 'protobuf', adapter: Pus019Model },
  Pus013Model: { type: 'protobuf', adapter: Pus013Model },
  PusValue: { type: 'protobuf', adapter: PusValue },
  PusMmePacket: { type: 'protobuf', adapter: PusMmePacket },
  ResetStructure: { type: 'protobuf', adapter: ResetStructure },
  Pus011TimeShift: { type: 'protobuf', adapter: Pus011TimeShift },
  InitialiseStructure: { type: 'protobuf', adapter: InitialiseStructure },
  DataStructure: { type: 'protobuf', adapter: DataStructure },
  Pus012ParameterMonitoringDefinition: { type: 'protobuf', adapter: Pus012ParameterMonitoringDefinition },
  PusServiceApid: { type: 'protobuf', adapter: PusServiceApid },
  Pus005OnBoardEvent: { type: 'protobuf', adapter: Pus005OnBoardEvent },
  Pus015PacketStore: { type: 'protobuf', adapter: Pus015PacketStore },
  Pus011Command: { type: 'protobuf', adapter: Pus011Command },
  Pus014Model: { type: 'protobuf', adapter: Pus014Model },
  PusMmePacketStore: { type: 'protobuf', adapter: PusMmePacketStore },
  Pus144OnboardFile: { type: 'protobuf', adapter: Pus144OnboardFile },
  Pus011Apid: { type: 'protobuf', adapter: Pus011Apid },
  Pus014ForwardedPacket: { type: 'protobuf', adapter: Pus014ForwardedPacket },
  Pus011CommandParameter: { type: 'protobuf', adapter: Pus011CommandParameter },
  Pus011Model: { type: 'protobuf', adapter: Pus011Model },
  Pus140Parameter: { type: 'protobuf', adapter: Pus140Parameter },
  Pus005Model: { type: 'protobuf', adapter: Pus005Model },
  Pus015Packet: { type: 'protobuf', adapter: Pus015Packet },
  Pus142FunctionalMonitoring: { type: 'protobuf', adapter: Pus142FunctionalMonitoring },
  Pus019EventAction: { type: 'protobuf', adapter: Pus019EventAction },
  Pus011SubSchedule: { type: 'protobuf', adapter: Pus011SubSchedule },
  PusParameter: { type: 'protobuf', adapter: PusParameter },
  PusMmePacketParameter: { type: 'protobuf', adapter: PusMmePacketParameter },
  Pus013LdtPart: { type: 'protobuf', adapter: Pus013LdtPart },
  Pus142ParameterMonitoringDefinition: { type: 'protobuf', adapter: Pus142ParameterMonitoringDefinition },
  CompareStructure: { type: 'protobuf', adapter: CompareStructure },
};
